css/about.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap');
@import url('/css/style.css');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* :root{
    --main-color: #212121;
    --main-words-color:  #f5fafa;
    --secondary-color:#6bd0f8;
    --black-default: #0D7377;
    --background-third-color: #ECB365;
    --black-default: #000000;
    --ice-color: #f6f6f6;
    --background-black-hover: rgba(39, 39, 39, 1);
    --background-black-hover: rgba(39, 39, 39, 1);
    --scrollbar-color:  rgba(46, 222, 245, 0.144);

    --first-font: 'Krona One', sans-serif;
    --secondary-word: 'Monserrat', sans-serif;
} */

body{
    background-color: var(--main-color);
    color: var(--main-words-color);
    overflow-x: hidden;
    height: 100%;
}

::-webkit-scrollbar{
    width: 12px;
}
::-webkit-scrollbar-thumb{
    background-color: var(--scrollbar-color);
    border-radius: 6px;
}

header.navigation{
    padding: 3% 0 0 10%;
}

.navigation__menu{
    display: flex;
    gap: 80px;
}

.navigation__menu__link{
    font-family: var(--secondary-word);
    font-size: 1.5em;
    font-weight: 600;
    color: var(--secondary-color);
    display: inline-block;
    padding-bottom: 0.5em;
    position: relative;
    text-decoration: none;
}

.navigation__menu__link::before{
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 0;
    height: 2px;
    background-color: var(--secondary-color);
    transition: width 0.3s ease-out;
}
a.navigation__menu__link:hover::before{
    width: 30%;
}

a.navigation__menu__link:hover{
    color: var(--main-words-color);
}

.presentation__assignment__timeline{
    position: relative;
    max-width: 1200px;
    margin: 100px auto;
}

.presentation__assignment__container{
    padding: 10px 50px;
    position: relative;
    width: 50%;
    color: var(--main-color);
    animation: movedown 1s linear forwards;
    opacity: 0;
}
@keyframes movedown{
    0%{
        opacity: 1;
        transform: translateY(-30px);
    }
    100%{
        opacity: 1;
        transform: translateY(0);
    }
}

.presentation__assignment__container:nth-child(1){
    animation-delay: 0s;
}
.presentation__assignment__container:nth-child(2){
    animation-delay: 1s;
}
.presentation__assignment__container:nth-child(3){
    animation-delay: 2s;
}
.presentation__assignment__container:nth-child(4){
    animation-delay: 3s;
}
.presentation__assignment__container:nth-child(5){
    animation-delay: 4s;
}
.presentation__assignment__container:nth-child(6){
    animation-delay: 5s;
}
.presentation__assignment__container:nth-child(7){
    animation-delay: 6s;
}
.presentation__assignment__container:nth-child(8){
    animation-delay: 7s;
}
.presentation__assignment__container:nth-child(9){
    animation-delay: 8s;
}


.presentation__assignment__text-box{
    padding: 20px 30px;
    background: var(--main-words-color);
    position: relative;
    border-radius: 6px;
    font-size: 1em;
}

.presentation__assignment__container-left{
    left: 0;
}

.presentation__assignment__container-right{
    left: 50%;
}

div.presentation__assignment__container img{
    position: absolute;
    width: 3.2em;
    border-radius: 50%;
    padding: 2%;
    right: -20px;
    z-index: 1;
    background-color: var(--main-words-color);
}

div.presentation__assignment__container-right img{
    left: -20px;
    z-index: 2;
}

.presentation__assignment__timeline::after{
    content: '';
    position: absolute;
    width: 4px;
    height: 100%;
    background-color: var(--main-words-color);
    top: 0;
    left: 50%;
    margin-left: -3px;
    z-index: -1;
    animation: moveline 6s linear forwards;
}
@keyframes moveline{
    0%{
        height: 0;
    }
    100%{
        height: 100%;
    }
}

div.presentation__assignment__container-left img{
    z-index: 2;
}

div.presentation__assignment__text-box h2{
    font-family: var(--first-font);
    font-size: 1em;
    font-weight: 600;
}

div.presentation__assignment__text-box small{
    font-family: var(--secondary-word);
    font-size: 1em;
    display: inline-block;
    margin: 0.5em 0 1em 0;
}

div.presentation__assignment__text-box{
    font-family: var(--secondary-word);
}

div.presentation__text-box__list{
    margin-left: 50px;
    margin-top: 16px;
}

div.presentation__text-box__list ul.presentation__text-box__list-styled{
    columns: 2;
    -webkit-columns: 2;
    -moz-columns: 2;
}

div.presentation__assignment__text-box button{
    margin-top: 1em;
    border-radius: 6px;
    text-decoration: none;
    padding: 8px;
    cursor: pointer;
    border: 1px solid var(--main-color);
    font-family: var(--first-font);
}

div.presentation__assignment__text-box button a{
    width: 100%;
    height: 100%;
    padding: 6px 10px;
    text-decoration: none;
    color: var(--main-color)
}

span.presentation__container__left-arrow{
    height: 0;
    width: 0;
    position: absolute;
    top: 28px;
    z-index: 1;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-left: 15px solid var(--main-words-color);
    right: -15px;
}

span.presentation__container__right-arrow{
    height: 0;
    width: 0;
    position: absolute;
    top: 28px;
    z-index: 1;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-right: 15px solid var(--main-words-color);
    left: -15px;
}

img#personal-image{
    border: 1px solid var(--secondary-color);
    border-radius: 8%;
    width: 30%;
}

footer.footer{
    color: var(--main-color);
    padding: 24px;
    background-color: var(--secondary-color);
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    position: relative;
}

footer a.footer_links{
    margin: 0 24px;
    text-decoration: none;
}

footer a.footer_links img{
    width: 24px
}

footer div.icons_footer{
    padding-bottom: 1em;
}

footer h3{
    position: absolute;
    bottom: 0;
}

@media (min-width: 1200px){
    div.presentation__assignment__text-box button:hover{
        color: var(--ice-color);
        background-color: var(--secondary-color);
        transition: 0.3s;
    }

    footer.footer{
        color: var(--main-color);
        padding: 24px;
        background-color: var(--secondary-color);
        display: flex;
        position: relative;
        align-items: center;
        justify-content: center;
    }
    
    footer a.footer_links{
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
        margin: 0 15px;
        border-radius: 50%;
        text-decoration: none;
    }
    
    footer a.footer_links img{
        width: 24px
    }
    
    footer a.footer_links:hover{
        background-color: var(--main-words-color);
        transition: 0.3s;
    }

    footer h3{
        position: absolute;
        bottom: 0;
    }
}

@media (max-width: 1200px){

    header.navigation {
        padding: 3%;
    }

    body{
        display: flex;
        flex-direction: column;
        overflow-y: hidden;
    }

    .navigation__menu {
        justify-content: center;
    }

    .presentation{
        flex-direction: column-reverse;
        padding: 5%;
    }

    .presentation__assignment {
        width: auto;
        margin-top: 10%;
    }

    h1.presentation__assignment__title{
        font-size: 1.6rem;
    }

    p.presentation__assignment__paragraphs{
        font-size: 1.2rem;
    }

    h2.presentation__links__subtitle{
        font-size: 1.2rem;
    }
}

@media screen and (max-width: 650px){
    .presentation__assignment__timeline{
        margin: 50px;
    }
    .presentation__assignment__timeline::after{
        left: 31px;
    }
    .presentation__assignment__container{
        width: 100%;
        padding-left: 80px;
        padding-right: 15px;
    }
    
    .presentation__assignment__text-box small{
        margin-bottom: 10px;
    }
    div.presentation__assignment__container-right{
        left: 0;
    }

    .presentation__assignment__container-right{
        left: 20px;
    }

    .presentation__assignment__container-left img.left,.presentation__assignment__container-right img.right{
        left: 10px;
    }

    span.presentation__container__left-arrow,
    span.presentation__container__right-arrow{
        border-right: 15px solid var(--ice-color);
        border-left: 0;
        left: -15px;
    }
}

@media (min-width: 200px) and (max-width: 450px){
    .presentation{
        padding: 0;
    }

    .presentation__assignment__timeline{
        margin: 20px;
    }
    
    div.presentation__assignment__container img{
        width: 2.5em;
    }

    div.presentation__assignment__container{
        overflow-wrap: break-word;
        padding-left: 65px;
        padding-right: 5px;
    }
}

